--- a/src/css/variables.scss
+++ b/src/css/variables.scss
@@ -1,11 +1,6 @@
 $black: #504d4d;
-$gray: #675A55;
-$light_gray: #d6dbdb;
 $white: #ffffff;
-$red: #D07677;
-$blue: #559B9B;
-$green: #9DB991;
-$yellow: #E8C194;
+$red: #FF6E7E;
 
 $tiny_spacing: 4px;
 $small_spacing: 8px;
@@ -39,4 +34,12 @@ $directions: (
             }
         }
     }
+}
+
+@mixin cover() {
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    top: 0;
 }
