--- a/src/css/variables.scss
+++ b/src/css/variables.scss
@@ -19,6 +19,8 @@ $directions: (
     between: between
 );
 
+$desktop: 600px;
+
 @mixin responsive($direction, $px, $px2: null) {
     $dir: map-get($directions, $direction);
     @if $dir == null {
