--- a/src/css/variables.scss
+++ b/src/css/variables.scss
@@ -1,6 +1,10 @@
 $black: #504d4d;
 $white: #ffffff;
 $red: #FF6E7E;
+$sky_blue: #85C3EC;
+$sky_grey: #E1D5BB;
+$night_blue: #163AA8;
+$night_purple: #BC0B4B;
 
 $tiny_spacing: 4px;
 $small_spacing: 8px;
@@ -9,6 +13,7 @@ $large_spacing: 24px;
 $xlarge_spacing: 48px;
 
 $short_duration: 0.2s;
+$long_duration: 2.0s;
 $standard_border_radius: 4px;
 
 $directions: (
