--- a/src/css/variables.scss
+++ b/src/css/variables.scss
@@ -1,10 +1,12 @@
-$black: #504d4d;
+$black: #090A0F;
 $white: #ffffff;
+$gray: #cccccc;
 $red: #FF6E7E;
 $sky_blue: #85C3EC;
 $sky_grey: #E1D5BB;
 $night_blue: #163AA8;
 $night_purple: #BC0B4B;
+$space_blue: #1B2735;
 
 $tiny_spacing: 4px;
 $small_spacing: 8px;
