--- a/src/css/common.scss
+++ b/src/css/common.scss
@@ -8,6 +8,7 @@ body {
     font-family: 'Montserrat', sans-serif;
     font-weight: 400;
     font-size: 1em;
+    line-height: 1.5em;
     height: 100%;
 }
 
@@ -20,11 +21,13 @@ body {
 
 h1 {
 	font-size: 3em;
+    line-height: 1em;
 	margin: 0;
 }
 
 h2 {
     font-size: 2em;
+    line-height: 1em;
     margin: 0;
 }
 
