change text color in sunset animation

--- a/src/css/cover.scss
+++ b/src/css/cover.scss
@@ -67,6 +67,7 @@
         text-align: center;
         padding-bottom: $large_spacing;
         margin: 0;
+        transition: color $long_duration;
     }
 
     .city {
@@ -93,6 +94,10 @@
 
         .sunAndMoon {
             transform: rotate(160deg);
+        }
+
+        .myInfo {
+            color: $white;
         }
     }
 }
